Changes since CEXP-1.6.beta
 2008/10/8:
 - Added support for loading modules with weak undefined symbols
   (we treat them like newly defined COMMON symbols).
 2008/10/7:
 - Added checks dealing with zero-sized memory segments.
 - Added support for getting result + status of last evaluation.
 - Set special user-var 'ans' to result of last successful
   evaluation.
 2008/10/7:
 - BUGFIX: floating-point numbers w/o fractional part (e.g., 20. 0.) were
   not scanned correctly.
 2008/10/4:
 - Added changeable prompt (but no smart substitutions available [yet])
 2008/7/25:
 - With multiple memory regions/segments cexpSymLkAddrIdx() (and derived functions)
   cannot simply look at the first+last entry in the 'aindex' to determine if
   a given module contains an address location. Added code that checks the module's
   memory segment boundaries.
 2008/7/25:
 - Made (PPC) text segment size a 'configure' option '--enable-text-segment'.
 2008/7/25:
 - Disable PPC/SYSV-specific method of passing floating-point arguments
   to called function if _SOFT_FLOAT is defined (cannot pass in FP regs,
   in this case).
 2008/7/23:
 - added support for multiple memory segments. PPC text sections can
   now be loaded into dedicated text segment located below 32M boundary.
   (Total size of all text in all modules is still limited to 32M.)
 - 'cplusplusified' public headers.
Changes since CEXP-1.5
 2008/4/29:
 - Added toplevel Makefile rules 'rtemsbsp'/'rtemsbsp-install' which
   read Makefile.inc and configure the package using CPU flags and
   setting prefix/exec_prefix/includedir to match std. RTEMS layout.
 2008/4/17:
 - new LICENSE; we now use the SLAC license instead of the EPICS open
   license.
 2008/4/16:
 - removed support for libelf; we now use pmelf when appropriate.
 - added multilib support. libcexp, libtecla, libspencer_regexp and
   libpmbfd/libpmelf can be built as multilibs.
   NOTE: 'real' BFD does not support multilibs and hence we cannot