@@ -1,4 +1,8 @@
 Changes since CEXP-1.6.beta
+
+ 2008/10/8:
+ - Removed most targets from toplevel 'Makefile' (were broken by latest
+   changes). User must use 'configure' him-/herself.
  2008/10/8:
  - Added support for loading modules with weak undefined symbols
    (we treat them like newly defined COMMON symbols).
@@ -28,7 +32,9 @@ Changes since CEXP-1.6.beta
    now be loaded into dedicated text segment located below 32M boundary.
    (Total size of all text in all modules is still limited to 32M.)
  - 'cplusplusified' public headers.
+
 Changes since CEXP-1.5
+
  2008/4/29:
  - Added toplevel Makefile rules 'rtemsbsp'/'rtemsbsp-install' which
    read Makefile.inc and configure the package using CPU flags and
